--- a/docs/modules/stackablectl/pages/demos/trino-iceberg.adoc
+++ b/docs/modules/stackablectl/pages/demos/trino-iceberg.adoc
@@ -43,7 +43,7 @@ To list the installed installed Stackable services run the following command:
 ----
 $ stackablectl stacklets list
 ┌─────────┬──────────────┬───────────┬──────────────────────────────────────────────┐
-│ Product ┆ Name         ┆ Namespace ┆ Endpoints                                    │
+│ PRODUCT ┆ NAME         ┆ NAMESPACE ┆ ENDPOINTS                                    │
 ╞═════════╪══════════════╪═══════════╪══════════════════════════════════════════════╡
 │ hive    ┆ hive-iceberg ┆ default   ┆ hive                172.18.0.4:30637         │
 │         ┆              ┆           ┆ metrics             172.18.0.4:30176         │
