Add installation docs

--- a/docs/modules/stackablectl/nav.adoc
+++ b/docs/modules/stackablectl/nav.adoc
@@ -1,15 +1,15 @@
-* xref:stackablectl:index.adoc[Stackablectl]
-** xref:stackableclt:installation.adoc[Installation]
-** xref:stackableclt:quickstart.adoc[Quickstart]
-** xref:stackablectl:commands/index.adoc[Commands]
-*** xref:stackablectl:commands/cache.adoc[cache]
-*** xref:stackablectl:commands/completions.adoc[completions]
-*** xref:stackablectl:commands/demo.adoc[demo]
-*** xref:stackablectl:commands/operator.adoc[operator]
-*** xref:stackablectl:commands/release.adoc[release]
-*** xref:stackablectl:commands/stack.adoc[stack]
-*** xref:stackablectl:commands/stacklets.adoc[stacklets]
-** xref:stackablectl:demos/index.adoc[Demos]
+* xref:index.adoc[Stackablectl]
+** xref:installation.adoc[Installation]
+** xref:quickstart.adoc[Quickstart]
+** xref:commands/index.adoc[Commands]
+*** xref:commands/cache.adoc[cache]
+*** xref:commands/completions.adoc[completions]
+*** xref:commands/demo.adoc[demo]
+*** xref:commands/operator.adoc[operator]
+*** xref:commands/release.adoc[release]
+*** xref:commands/stack.adoc[stack]
+*** xref:commands/stacklets.adoc[stacklets]
+** xref:demos/index.adoc[Demos]
 include::partial$demos.adoc[]
 ** xref:customization/index.adoc[]
 *** xref:customization/add-demo.adoc[]
