Adjust quick start guide

--- a/docs/modules/stackablectl/pages/quickstart.adoc
+++ b/docs/modules/stackablectl/pages/quickstart.adoc
@@ -1,19 +1,13 @@
 = Quickstart
 
-== Goal
-
-In this Quickstart guide you will install a xref:commands/demo.adoc[], which is an end-to-end demonstration of the usage
-of the Stackable data platform.
-
-== Install stackablectl
-
-Please follow the xref:installation.adoc[Installation documentation] to install `stackablectl`.
+In this Quickstart guide, you will install a xref:commands/demo.adoc[demo], which is an end-to-end demonstration of the
+usage of the Stackable data platform. Please follow the xref:installation.adoc[Installation documentation] to install
+the `stackablectl` tool.
 
 == Browse Available Demos
 
-Stackable provides a set of ready-to-use demos. As of writing (2022/08/15) only two demos are available, but further
-demos will be added in the future. They will automatically show up, as `stackablectl` fetches the available list of
-demos via the internet. To list the available demos run the following command:
+Stackable provides a set of ready-to-use demos. They will automatically appear as `stackablectl` fetches the available
+list of demos via the internet. To list the available demos, run the following command:
 
 [source,console]
 ----
@@ -37,18 +31,17 @@ When you are on a Windows system you have to replace the `stackablectl` command 
 `stackablectl.exe demo list`. This applies to all commands below.
 ====
 
-For this guide we will use the xref:demos/trino-taxi-data.adoc[] demo. The installation of other available demos should
-work the same way. You simply need to use the name of the chosen demo instead of `trino-taxi-data` in the following
-commands.
+For this guide, we will use the xref:demos/trino-taxi-data.adoc[] demo. The installation of other available demos should
+work the same way. You need to use the name of the chosen demo instead of `trino-taxi-data` in the following commands.
 
 == Install Demo
 
-The installation depends on wether you already have an Kubernetes available to run the Stackable data platform on.
+The installation depends on whether you already have a Kubernetes cluster to run the Stackable Data Platform.
 
 === Using Existing Kubernetes Cluster
 
 If you want to access a Kubernetes cluster, make sure your https://kubernetes.io/docs/tasks/tools/#kubectl[`kubectl`]
-Kubernetes client is configured to interact with the Kubernetes cluster. After that run the following command.
+Kubernetes client is configured to interact with the Kubernetes cluster. After that, run the following command:
 
 [source,console]
 ----
@@ -99,10 +92,10 @@ Use "stackablectl operator installed" to display the installed operators
 Use "stackablectl stacklet list" to display the installed stacklets
 ----
 
-The demos create Kubernetes jobs, that will populate test data and talk to the installed products to process the data.
-Until the products are ready, it is completely normal that the pods of these jobs will fail with an error. They will get
-retried with an exponentially growing backoff time. After the products are ready they should turn green and everything
-should settle down.
+The demos create Kubernetes jobs that will populate test data and talk to the installed products to process the data.
+Until the products are ready, the pods of these jobs are expected to fail with an error. They will get retried with an
+exponentially growing backoff time. After the products are ready, they should turn green, and everything should settle
+down.
 
 == Proceed with the Demo
 
