--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -80,7 +80,7 @@ Interact with all operators of the platform which are released together
 stackablectl\-stack(1)
 Interact with stacks, which are ready\-to\-use product combinations
 .TP
-stackablectl\-stacklets(1)
+stackablectl\-stacklet(1)
 Interact with deployed stacklets, which are bundles of resources and containers required to run the product
 .TP
 stackablectl\-demo(1)
