Add page aliases

--- a/docs/modules/stackablectl/pages/commands/demo.adoc
+++ b/docs/modules/stackablectl/pages/commands/demo.adoc
@@ -1,4 +1,5 @@
 = stackablectl demo
+:page-aliases: stackablectl::commands/demo.adoc
 
 A demo is an end-to-end demonstration of the usage of the Stackable data platform. It is tied to a specific stack of the
 Stackable data platform, which will provide the required products for the demo.
